# simple_games

./: .gitignore  README.md
blocks/: icon.svg.import  project.godot
blocks/scene/: config.gd  config.gd.uid  config.tscn  main.gd  main.gd.uid  main.tscn  square_scene.tscn  tile_set.tres
blocks_love/: board.lua  config.lua  main.lua  piece.lua  tetromino.lua
blocks_rotation/: .editorconfig  README.md  board.lua  config.lua  coordinates.lua  main.lua  matrix.lua  piece.lua  shapes.lua  tetromino.lua
blocks_rs/: Cargo.toml
blocks_rs/src/: block.rs  board.rs  camera.rs  config.rs  constants.rs  control.rs  cube.rs  game.rs  main.rs  matrix.rs  resolution.rs  sprite.rs  tetroid.rs
blocks_rs/src/components/: block.rs  mod.rs  position.rs
blocks_rs/src/messages/: movement.rs
blocks_rs/src/resources/: board.rs  config.rs  mod.rs  sprites.rs
blocks_rs/src/systems/: board.rs  config.rs  control.rs  mod.rs  tetroid.rs
tetris/: format.sh  project.godot
tetris/assets/: Blue.png.import  Border.png.import  Cyan.png.import  Ghost.png.import  Green.png.import  Grid.png.import  Orange.png.import  Purple.png.import  Red.png.import  Yellow.png.import  icon.svg.import
tetris/resources/: i_piece_data.tres  j_piece_data.tres  l_piece_data.tres  o_piece_data.tres  s_piece_data.tres  t_piece_data.tres  z_piece_data.tres
tetris/scenes/: ghost_tetromino.tscn  main.tscn  piece.tscn  tetromino.tscn  ui.tscn
tetris/scripts/: board.gd  board.gd.uid  ghost_tetromino.gd  ghost_tetromino.gd.uid  piece.gd  piece.gd.uid  piece_data.gd  piece_data.gd.uid  piece_spawner.gd  ui.gd  (+6 more)
(+14 files in other folders)
