[package]
name = "blocks_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"

bevy_asset = { version = "0.17.2", features = [
    "asset_processor",
    "file_watcher",
] }
bevy_internal = "0.17.2"


[profile.dev]
# Enable a small amount of optimization in the dev profile.
opt-level = 1

[profile.dev.package."*"]
# Enable a large amount of optimization in the dev profile for dependencies.
opt-level = 3

[profile.release]
# Enable more optimization in the release profile at the cost of compile time.
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[profile.wasm-release]
# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Enable wayland support
[features]
default = ["wayland"]

# Wayland display server support
wayland = ["bevy_internal/wayland"]
webgl2 = ["bevy_internal/webgl"]
